--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -1,6 +1,24 @@
 <html>
     <head>
         <title>Piscine Web</title>
+            <style>
+        h1 {
+            text-align: center;
+            font-size: 3em;
+            margin-top: 5vh;
+        }
+        .images {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 40px;
+        }
+        .images img {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
+        }
+    </style>
     </head>
     <body>
         <h1 style="text-align: center;">Piscine Web</h1>
