--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Piscine Web</title>
-            <style>
+        <style>
         h1 {
             text-align: center;
             font-size: 3em;
@@ -18,13 +18,14 @@
             height: auto;
             border-radius: 10px;
         }
-    </style>
+        </style>
     </head>
     <body>
-        <h1 style="text-align: center;">Piscine Web</h1>
-    <div class="images">
-        <img src="https://preview.redd.it/show-me-your-cats-potential-meme-photo-now-v0-8pgz4s1rba3d1.jpeg?width=1080&crop=smart&auto=webp&s=0e715dafbfdbf94a656dcb58dc5f40fb679c593f">
-        <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/LD7WEPSAP7XPVEERGVIKMYX24Q.JPG&w=1800&h=1800">
-    </div>
+        <h1>Piscine Web</h1>
+
+        <div class="images">
+            <img src="https://preview.redd.it/show-me-your-cats-potential-meme-photo-now-v0-8pgz4s1rba3d1.jpeg?width=1080&crop=smart&auto=webp&s=0e715dafbfdbf94a656dcb58dc5f40fb679c593f">
+            <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/LD7WEPSAP7XPVEERGVIKMYX24Q.JPG&w=1800&h=1800">
+        </div>
     </body>
 </html>
