--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -22,11 +22,14 @@
     </head>
     <body>
         <h1>Piscine Web</h1>
-        <a></a>
+<div class="images">
+  <a href="https://www.youtube.com/watch?v=INscMGmhmX4&ab_channel=RealGrumpyCat" target="_blank">
+    <img src="https://preview.redd.it/show-me-your-cats-potential-meme-photo-now-v0-8pgz4s1rba3d1.jpeg?width=1080&crop=smart&auto=webp&s=0e715dafbfdbf94a656dcb58dc5f40fb679c593f">
+  </a>
 
-        <div class="images">
-            <a href="https://www.youtube.com/watch?v=INscMGmhmX4&ab_channel=RealGrumpyCat"><img src="https://preview.redd.it/show-me-your-cats-potential-meme-photo-now-v0-8pgz4s1rba3d1.jpeg?width=1080&crop=smart&auto=webp&s=0e715dafbfdbf94a656dcb58dc5f40fb679c593f"></a>
-            <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/LD7WEPSAP7XPVEERGVIKMYX24Q.JPG&w=1800&h=1800">
-        </div>
+  <a href="" target="_blank">
+    <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/LD7WEPSAP7XPVEERGVIKMYX24Q.JPG&w=1800&h=1800">
+  </a>
+</div>
     </body>
 </html>
