--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -24,7 +24,7 @@
         <h1>Piscine Web</h1>
 
         <div class="images">
-        <a href="https://youtu.be/INscMGmhmX4?si=8dXhfP7EqamBsoPe"><img src="https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fshow-me-your-cats-potential-meme-photo-now-v0-8pgz4s1rba3d1.jpeg%3Fwidth%3D1080%26crop%3Dsmart%26auto%3Dwebp%26s%3D0e715dafbfdbf94a656dcb58dc5f40fb679c593f"></a>
+        <a href="https://youtu.be/INscMGmhmX4?si=8dXhfP7EqamBsoPe"><img src="https://preview.redd.it/show-me-your-cats-potential-meme-photo-now-v0-8pgz4s1rba3d1.jpeg?width=1080&crop=smart&auto=webp&s=0e715dafbfdbf94a656dcb58dc5f40fb679c593f"></a>
         <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/LD7WEPSAP7XPVEERGVIKMYX24Q.JPG&w=1800&h=1800">
         </div>
     </body>
