--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -26,6 +26,7 @@
 
     .shop {
       text-align: center;
+      font-family: Arial, sans-serif;
     }
 
     .shop img {
@@ -56,12 +57,12 @@
 
   <div class="shop-section">
     <div class="shop">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
-      <div><a href="https://www.amazon.com" target="_blank">Visit Website</a></div>
+      <img src="https://www.lnwshop.com/system/application/modules/lnwshopweb/_images/store/logo/m_lazada.png" alt="Amazon">
+      <div><a href="https://www.lazada.co.th/#?" target="_blank">Lazada</a></div>
     </div>
     <div class="shop">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Shopify_logo_2018.svg" alt="Shopify">
-      <div><a href="https://www.shopify.com" target="_blank">Visit Website</a></div>
+      <img src="https://dl.memuplay.com/new_market/img/com.shopee.th.icon.2025-05-27-00-20-03.png" alt="Shopee">
+      <div><a href="https://shopee.co.th/?gad_source=1&gad_campaignid=19798166808&gbraid=0AAAAADPpYO3qbPPlZTX9V7sChmO1ibpCX&gclid=CjwKCAjwx8nCBhAwEiwA_z__06FAnK6-1eSoqQ3yonOoWm4PnSV8mXLPfSs-L8XhjxgKmAdyQ_ZVhhoC4YYQAvD_BwE" target="_blank">Shopee</a></div>
     </div>
   </div>
 
