--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -6,7 +6,7 @@
   <style>
     body {
       margin: 0;
-      background-color: pink;
+      background-color: rgb(214, 3, 133);
       font-family: Arial, sans-serif;
     }
 
