--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -12,18 +12,17 @@
       font-family: "Arial", sans-serif;
     }
     table {
+      width: 100vw;
+      height: 100vh;
       border-collapse: collapse;
-      width: 600px;
-      height: 100px;
-      border: 1px solid black;
+      table-layout: fixed;
     }
     td {
-      width: 50%;
       text-align: center;
       vertical-align: middle;
       font-size: 18px;
-      font-family: Arial, sans-serif;
-      border: 1px solid black;
+      border: 1px solid #555;
+      word-wrap: break-word;
     }
     .cell1 {
       background-color: #8eb102; 
