--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -25,10 +25,12 @@
       word-wrap: break-word;
     }
     .cell1 {
-      background-color: #8eb102; 
+      background-color: #8eb102;      
+      color: #2d3a00;
     }
     .cell2 {
-      background-color: #c92f00; 
+      background-color: #c92f00;
+      color: #5c0000;
     }
   </style>
 </head>
