--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -9,37 +9,43 @@
       padding: 0;
       height: 100%;
       width: 100%;
-      font-family: "Arial", sans-serif;
+      font-family: "Times New Roman", serif;
     }
+
     table {
       width: 100vw;
       height: 100vh;
       border-collapse: collapse;
       table-layout: fixed;
     }
+
     td {
       text-align: center;
       vertical-align: middle;
-      font-size: 18px;
+      font-size: 1.5em;
       border: 1px solid #555;
       word-wrap: break-word;
     }
+
     .cell1 {
-      background-color: #8eb102;      
+      background-color: #c3cd7b; 
       color: #2d3a00;
     }
+
     .cell2 {
-      background-color: #c92f00;
+      background-color: #f9c2b4;
       color: #5c0000;
     }
   </style>
 </head>
 <body>
+
   <table>
     <tr>
-      <td class="cell1">First cell</td>
-      <td class="cell2">Second cell</td>
+      <td class="cell1">Firyt Cell</td>
+      <td class="cell2">Second Cell</td>
     </tr>
   </table>
+
 </body>
 </html>
