--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -23,17 +23,17 @@
       text-align: center;
       vertical-align: middle;
       font-size: 1.5em;
-      border: 1px solid #555;
+      border: 1px solid black;
       word-wrap: break-word;
     }
 
     .cell1 {
-      background-color: #c3cd7b; 
+      background-color: #8eb102; 
       color: #2d3a00;
     }
 
     .cell2 {
-      background-color: #f9c2b4;
+      background-color: #c92f00; 
       color: #5c0000;
     }
   </style>
@@ -42,7 +42,7 @@
 
   <table>
     <tr>
-      <td class="cell1">Firyt Cell</td>
+      <td class="cell1">First Cell</td>
       <td class="cell2">Second Cell</td>
     </tr>
   </table>
