--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -9,8 +9,8 @@
 <body>
     <table>
         <tr>
-            <td style="background-color: #8eb102;">test</td>
-            <td style="background-color: #c92f00;">test2</td>
+            <td style="background-color: #8eb102;">First Cell</td>
+            <td style="background-color: #c92f00;">Second Cell</td>
         </tr>
     </table>
 </body>
