--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -6,16 +6,15 @@
   <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-
-  <div class="menu">
-    <button class="menu-btn">SNCF Sandwich Menu</button>
-    <div class="dropdown">
-      <a href="#">Ham</a>
-      <a href="#">Cheese</a>
-      <a href="#">Butter</a>
-      <a href="#">Mustard</a>
-    </div>
-  </div>
-
+  <nav class="navbar">
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li class="dropdown">
+        <a href="#">Sandwiches ▾</a>
+        <ul class="dropdown-content">
+          <li><a href="#">Ham</a></li>
+          <li><a href="#">Cheese</a></li>
+          <li><a href="#">Veggetable</a></li>
+  </nav>
 </body>
 </html>
